<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="film"
                type="com.studio.yami.ajpfinal.data.server.Film.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_info"
                style="@style/title_style"
                android:text="@string/info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv_status"
                style="@style/content_style.light"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_info"/>

        <TextView
                android:id="@+id/tv_score"
                style="@style/content_style.light"
                android:text="@string/score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status"/>

        <TextView
                android:id="@+id/tv_duration"
                style="@style/content_style.light"
                android:text="@string/duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_score"/>

        <TextView
                android:id="@+id/tv_language"
                style="@style/content_style.light"
                android:layout_marginBottom="16dp"
                android:text="@string/language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration"/>

        <TextView
                android:id="@+id/tv_status_value"
                style="@style/content_style.bold"
                android:text="@{film.status}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_info" />

        <TextView
                android:id="@+id/tv_score_value"
                style="@style/content_style.bold"
                android:text="@{film.getVoteAverage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_value"/>

        <TextView
                android:id="@+id/tv_duration_value"
                style="@style/content_style.bold"
                android:text="@{film.getDuration}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_score_value"/>

        <TextView
                android:id="@+id/tv_language_value"
                style="@style/content_style.bold"
                android:text="@{film.original_language}"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration_value"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>